2018-07-06  Julien Bect  <julien.bect@centralesupelec.fr>

	Parameter estimation criteria: return [] instead of NaN when...

	* param/estim/stk_param_loomse.m: Remove FIXME comment.
	* param/estim/stk_param_loopvc.m: Idem.
	* param/estim/stk_param_relik.m: Return [] instead of NaN for when
	the derivative with respect to lnv is requested for a noiseless
	model.

2018-07-02  Julien Bect  <julien.bect@centralesupelec.fr>

	param/estim: Use consistent output names

	* param/estim/stk_param_loomse.m: Rename outputs.
	* param/estim/stk_param_loopvc.m: Idem.
	* param/estim/stk_param_relik.m: Idem.

2018-07-01  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_relik.m: Re-use the Cholesky factorization of K

	* param/estim/stk_param_relik.m: Re-use the Cholesky factorization
	of K instead of doing it twice (this was inadvertently introduced
	recently).  Also, rename the Cholesky factor from C to U, which
	stands for "Upper-triangular", thus freeing the letter C which
	might be a good generic notation for "Criterion"...

2018-06-23  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_init.m: Fix the broken heteroscedastic case (ticket #88)

	* param/estim/stk_param_init.m (stk_param_init_): Clarify, at
	least a little bit, what the subfunction does in the three cases,
	and fix the broken behaviour in the heteroscedatic / known
	variance case.

2018-06-11  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_dominatedhv_mex.c: Workaround for Octave 4.4 issue (ticket #89)

	* misc/pareto/private/stk_dominatedhv_mex.c: Workaround for Octave
	4.4 issue (see ticket #54096 on Octave's bug tracker  for details).

2018-06-07  Julien Bect  <julien.bect@centralesupelec.fr>

	Check for duplicated rows when ill-conditioning is detected (ticket #74)

	* misc/error/stk_assert_no_duplicates.m: New function.
	* admin/octpkg/INDEX: Add new function to the index.
	* core/@stk_kreq_qr/stk_kreq_qr.m: Check for duplicated rows when
	ill-conditioning is detected.